# graphics-engine

./: .gitignore  CMakeLists.txt
data/: configuration.yml
data/shaders/: 2d_fragment.glsl  simple_fragment.glsl  simple_vertex.glsl  text_fragment.glsl  text_vertex.glsl
include/: application.hpp  bitmap_text.hpp  camera.hpp  configuration.hpp  loader.hpp  model.hpp  phong.hpp  program.hpp  renderer.hpp  shader.hpp  simple.hpp  texture.hpp
src/: application.cpp  camera.cpp  configuration.cpp  loader.cpp  main.cpp  model.cpp  program.cpp  renderer.cpp  shader.cpp  simple.cpp  texture.cpp
